--- a/_drafts/2018-06-08-blog-post-4.md
+++ b/_drafts/2018-06-08-blog-post-4.md
@@ -18,22 +18,22 @@ This spring quarter, I worked at Oracle (previously Dyn) in Hanover. I spent a l
 
 Oracle
 ------
-Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict BGP paths and geolocations. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language), and I wrote code to generate embeddings with negative sampling as well as a deep neural net for geolocation prediction of internet domain names. My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, whom I found to be relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for more than a decade.
+Oracle has a small (about 15 people) internet intelligence office right in Hanover, about a mile north of campus. I worked with their internet intelligence data, using machine learning to predict BGP paths and IP geolocations. We mostly adopted techniques from natural language processing (internet routing paths can be modeled like words in a language), and I wrote code to generate embeddings of text as well as a deep neural net for predicting IP geolocation from domain name and BGP paths. My boss, Alin, was invested in me and at many times even went over low-level code with me. His creativity and attention to detail inspire me. I liked the people in our office, who were relaxed yet extremely intelligent. Many of them were dartmouth alumni and had been working together for over a decade.
 
-I had a couple of observations from working at Oracle. The first is that my progress on our project was non-linear. A lot of time was spent on brainstorming, reading papers, cleaning data, and debugging that didn't yield very much progress, whereas most of the big improvements to the model came from things that I was able to code in a few days. It closely followed the '80-20 rule,' where about eighty percent of my results were produced in twenty percent of the time, and the other eighty percent of the time only yielded twenty percent of the results. The other interesting thing that was confirmed by my internship is the idea that it is easy for AI to automate tasks that humans can do, but much harder for AI to automate tasks that humans cannot do. Our project wanted AI to predict things that typical humans could not, so (1) we did not know if it was even feasible, (2) we could not gather more data, and (3) we were not able to use human insights improve our model since we were unable to do the task ourselves. These challenges make it difficult to build compelling AI. 
+I had a couple of observations from working at Oracle. The first is that my progress on our project was non-linear. A lot of time was spent on brainstorming, reading papers, cleaning data, and debugging that didn't yield very much progress, whereas most of the big improvements to the model came from things that I was able to code in a few days. It closely followed the '80-20 rule,' where about eighty percent of my results were produced in twenty percent of the time, and the other eighty percent of the time only yielded twenty percent of the results. The other interesting thing that was confirmed by my internship is the idea that it is easy for AI to automate tasks that humans can do, but much harder for AI to automate tasks that humans cannot do. Our project wanted AI to predict things that typical humans could not, so (1) we did not know if it was even feasible, (2) we could not gather more data, and (3) we were not able to use human insights improve our model since we were unable to do the task ourselves. Despite these challenges, I was quite happy with our final product, a model that was able to predict IP geolocations with approximately human-level performance.
 
 Activities
 ------
 
 **Protago Labs**
-I continued working part-time for [Protago Labs](http://protagolab.com/), an small AI company I have been working for since last June. We made solid progress on our conversational chatbot by implementing some of the newer techniques that came out in papers this year.
+I continued working part-time for [Protago Labs](http://protagolab.com/), a small AI company I have been working for since last June. We made solid progress on our conversational chatbot by implementing some of the newer techniques that came out in papers this year.
 
 **Research**
-Without the pressure of classes, I was able to spend a lot more time on my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the curator of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
+Without the pressure of classes, I was able to spend a lot more time on my research in using deep learning to read lung adenocarcinoma microscopy slides. I spent a lot of time cleaning data and working with medical doctors to annotate our dataset. Getting high quality, labeled data has been the bottleneck of progress in our project, and my lesson learned this term is that all resources should be devoted to resolving bottleneck issues until they are solved. As the organizer of our dataset, I became extremely familiar with the data and spent many weeks actually learning about the biology of the lung cancer images and how to classify them. 
 
-When I first started our study, I researched the relevant literature and was surprised that no one had already done something similar. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more challenging to find medical doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, I found it challenging that my research timeline is so dependent on waiting for our pathologists to label our data.
+When I first started our study, I researched the relevant literature and was surprised that no one had already done something similar. Now, I see why it is so hard for deep learning researchers to develop tools for biomedical science; there is a large cost to obtaining data. Most large AI research groups do not have access to medical data since it is often challenging to partner with hospitals, even after a partnership is formed it is hard to acquire non-sensitive data in a useful format, and it is even more difficult to find doctors (who are often busy) willing to do the unsexy task of labeling your data. For me, it was at times challenging that my research timeline was so dependent on waiting for our pathologists to label our data.
 
-<img src='/images/lung_graphic.jpg' width="99%">
+<img src='/images/lung_graphic_small.jpg' width="99%">
 
 **Fencing**
 For fencing this term, we had our most important event of the year, club nationals. We were the first place six-weapon team! I was the alternate for our men's epee squad, which was stacked this year and beat Cornell in the finals to get first place for the men's epee event as well. The last time Dartmouth won first was in 2014, and winning this year was special for our coach Scott, class of 2014, who is graduating this year with his PhD. Scott saw the potential for our team this year and pushed us to be our best. He recently said to me, "Wait, you don't watch fencing videos before bed everyday?" 
@@ -45,6 +45,7 @@ I was a TA this term for Machine Learning and Statistical Analysis (COSC 74) wit
 Spring in Hanover is absolutely beautiful, and I made it a priority to play tennis at least once every week. After not playing since last summer, I realized how much I missed tennis (and how out of shape I was). I've decided to make an effort to play tennis more often, since it always puts me in a good mood and is great exercise.
 
 Take a picture of the tennis court on a nice day
+<img src='/images/2.png' width="49%">
 
 
 Personal
@@ -60,10 +61,6 @@ Picture of my room
 <img src='/images/IMG_0802.JPG' width="49%">
 <img src='/images/IMG_1887.JPG' width="49%">
 
-
-
-**Books**
-
 **Food**
 This term was my first time cooking for myself, as I was living off-campus without a meal plan. I realized how expensive Dartmouth's meal plan is compared to making your own food: Dartmouth's cheapest plan is $175 per week, whereas buying my own groceries came out to around $50 per week. In a typical week, I would eat five turkey sandwiches and five meals of fried rice that I made all at once on Sunday nights. For the remaining meals I usually ate with friends either at home or at the school dining hall.
 
@@ -73,14 +70,17 @@ I came up with a super nerdy scoring system to help me decide what food to buy. 
 - Three slices of Ovengold Roasted Turkey Breast from Boar's Head
 - One slice of Cracked Pepper Mill Smoked Turkey Breast from Boar's Head
 - One slice of Alpine Lace Swiss Cheese
-- One egg fried sunny side up with salt and pepper (optional)
+- One fried egg sunny side up with salt and pepper (optional)
 - Onions cooked with Red Fresno Pepper
 - Arugula
 - Mayo and Sriracha Sauce
 
-Meal with house
-Picture of sandwich
+<img src='/images/IMG_2515.JPG' width="49%">
+<img src='/images/IMG_6269.JPG' width="49%">
 
+**Books**
+
+I read *Mountains Beyond Mountains* by Tracy Kidder, a book that my friend Holly recommended to me. It's a biography about the life of Paul Farmer, a physician who treats tuberculosis patients in Haiti, Peru, and Russia. The story is inspiring because Farmer's societal output is so big for a single person, and his motivation for helping people is pure and unending. One theme that I found to be interesting that was also in *When Breath Becomes Air* by Paul Kalanithi (I don't know why I read so many doctor books) is the idea of accepting imperfection, but trying to get as close to perfection as possible. Kalanithi says "you can't even reach perfection, but you can believe in an asymptote toward which you are ceaselessly striving," and Farmer says "all the great religious traditions of the world say, love they neighbor as thyself. My answer is, I'm sorry, I can't but I'm gonna keep trying." My main takeaway from his story are how much impact a single hardworking individual can have on the world.
 
 Closing
 ------
